[fix] make visible the finish button

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -164,6 +164,8 @@ form label {
   margin-top: 5px;
   width: 300px;
 }
+
+
 .quizScore {
   margin-top: 50px;
   color: white;
@@ -215,7 +217,7 @@ form label {
   overflow-y: auto;
   position: absolute;
   top: 90px;
-  left: 640px;
+  left: 880px;
   margin: 0;
   width: fit-content;
   display: flex;
@@ -299,7 +301,8 @@ h1 {
   left: -316px;
 }
 .submitButton,
-.finishButton {
+.finishButton,
+.finishButton1 {
   margin-left: 15px;
   margin-right: 15px;
   margin-bottom: 5px;
@@ -328,11 +331,24 @@ h1 {
   margin-top: 40px;
   letter-spacing: 4px;
 }
-
+.finishButton1 {
+  display: inline-block;
+  padding: 10px 20px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 560px;
+  letter-spacing: 4px; 
+}
 .welcome button:hover,
 .login button:hover,
 .submitButton:hover,
-.finishButton:hover {
+.finishButton:hover,
+.finishButton1:hover {
   background: #03f40f;
   color: black;
   font-weight: bold;
@@ -344,7 +360,8 @@ h1 {
 .welcome button span,
 .login button span,
 .submitButton span,
-.finishButton span {
+.finishButton span,
+.finishButton1 span {
   position: absolute;
   display: block;
 }
@@ -363,7 +380,8 @@ h1 {
 .welcome button span:nth-child(1),
 .login button span:nth-child(1),
 .submitButton span:nth-child(1),
-.finishButton span:nth-child(1) {
+.finishButton span:nth-child(1),
+.finishButton1 span:nth-child(1) {
   bottom: 2px;
   left: -100%;
   width: 100%;
